[FB] Vertical Tabs | Fixed website resizing when hovering over collapsed tabs and margin inside webpanels when collapsed tabs are active.

--- a/browser/themes/designs/options/native-verticaltab-hover.css
+++ b/browser/themes/designs/options/native-verticaltab-hover.css
@@ -64,11 +64,15 @@
   }
 
   #TabsToolbar {
-    margin-right: -27px;
+    margin-right: -53px;
   }
 
   #appcontent {
-    margin-left: 27px;
+    margin-left: 53px;
+  }
+
+  .webpanels {
+    margin-left: -28px;
   }
 }
 
